add auth swagger
