# routes/web.php
@@ -33,15 +33,4 @@ Route::middleware('auth')->group(function () {
     Route::delete('/profile', [ProfileController::class, 'destroy'])->name('profile.destroy');
 });
 
-Route::get('cars', [CarsController::class, 'index'])->name('car.index');
-Route::get('cars/{id}', [CarsController::class, 'show']);
-Route::post('cars/create', [CarsController::class, 'store']);
-Route::put('cars/{id}/update', [CarsController::class, 'update']);
-Route::delete('cars/{id}/delete', [CarsController::class, 'destroy']);
-Route::get('arend', [ArendatorsController::class, 'index']);
-Route::get('arend/{id}', [ArendatorsController::class, 'show']);
-Route::post('arend/create', [ArendatorsController::class, 'store']);
-Route::put('arend/{id}/update', [ArendatorsController::class, 'update']);
-Route::delete('arend/{id}/delete', [ArendatorsController::class, 'destroy']);
-
 require __DIR__.'/auth.php';
